...
      .first

    guard let inputImage = inputImage ?? dependencyImage
      else { return }

    guard let filter = TiltShiftFilter(image: inputImage),
      let output = filter.outputImage else {
        print("Failed to generate tilt shift image")
        return
    }
    
    guard !isCancelled else {
      print(">>> Cancelling TiltShiftOperation")
...
